@@ -20,7 +20,6 @@
 #   Boston, MA 02110-1301, USA.
 
 use strict;
-use Switch;
 use File::Basename;
 
 my $outdir = $ARGV[0];
@@ -28,9 +27,7 @@ shift;
 my $option = basename($ARGV[0],".gperf");
 
 
-switch ($option) {
-
-case "DocTypeStrings" {
+if ($option eq "DocTypeStrings") {
 
     my $docTypeStringsGenerated    = "$outdir/DocTypeStrings.cpp";
     my $docTypeStringsGperf        = $ARGV[0];
@@ -38,9 +35,7 @@ case "DocTypeStrings" {
 
     system("gperf --key-positions=\"*\" -s 2 $docTypeStringsGperf > $docTypeStringsGenerated") == 0 || die "calling gperf failed: $?";
 
-} # case "DocTypeStrings"
-
-case "ColorData" {
+} elsif ($option eq "ColorData") {
 
     my $colorDataGenerated         = "$outdir/ColorData.cpp";
     my $colorDataGperf             = $ARGV[0];
@@ -48,6 +43,6 @@ case "ColorData" {
 
     system("gperf --key-positions=\"*\" -D -s 2 $colorDataGperf > $colorDataGenerated") == 0 || die "calling gperf failed: $?";
 
-} # case "ColorData"
-
-} # switch ($option)
+} else {
+    die "Unknown option.";
+}
